--- a/SimSelect/index.html
+++ b/SimSelect/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="http://drive.google.com/uc?export=view&id=1Rvsv9r5nL0OzmrB51zETsnLNn0itayo2" type="image/x-icon">
     <title>SimSelect | Simple Select</title>
 </head>
 
 <body>
-
+    <sim-select id="select1"></sim-select>
+    <br>
+    <sim-select id="select2"></sim-select>
+    <br>
+    <sim-select id="select3"></sim-select>
+    <!-- SCRIPTS -->
+    <script src="SimSelect.js"></script>
 </body>
 
 </html>
