--- a/00_ComponentBase/index.html
+++ b/00_ComponentBase/index.html
@@ -7,8 +7,7 @@
     <title>Componente Base</title>
 </head>
 <body>
-    <new-component id="componente1" data="DATA PARA COMPONENTE 1"></new-component>
-    <new-component></new-component>
+    <component-base></component-base>
     <script src="componentBase.js"></script>
 </body>
 </html>
