--- a/00_ComponentBase/index.html
+++ b/00_ComponentBase/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="http://drive.google.com/uc?export=view&id=1Rvsv9r5nL0OzmrB51zETsnLNn0itayo2" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Componente Base</title>
 </head>
 <body>
-    <component-base></component-base>
+    <component-base id="component1"></component-base>
     <script src="componentBase.js"></script>
 </body>
 </html>
