--- a/SimSelect/index.html
+++ b/SimSelect/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <sim-select id="select1"></sim-select>
+    <sim-select id="select2"></sim-select>
     <!-- SCRIPTS -->
     <script src="SimSelect.js"></script>
 </body>
